add bulk fetch endpoint
