# openapi.json
@@ -128,6 +128,45 @@
         }
       }
     },
+    "/systems/lookup": {
+      "get": {
+        "tags": [
+          "systems"
+        ],
+        "operationId": "systems_lookup",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "System ID to look up",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "minimum": 0
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "System information by ID",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SystemInfo"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "System not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
     "/systems/near": {
       "get": {
         "tags": [
@@ -460,6 +499,20 @@
             "type": "integer",
             "format": "int32",
             "nullable": true,
+            "minimum": 0
+          }
+        }
+      },
+      "SystemLookupQuery": {
+        "type": "object",
+        "required": [
+          "id"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "description": "System ID to look up",
             "minimum": 0
           }
         }
